docs(appkit): document phase 5 advanced windows